fixed skill cards on mobile

--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ body {
 }
 
 .skill-cards {
-  height: 25vmin; /*250px;*/
+  height: 25vh; /*250px;*/
   display: flex;
   overflow-x: scroll;
   overflow-y: clip;
